task-1: home - form

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,23 @@
 page-home {
+    .centered_container{
+        display: block;
+        max-width: 80%;
+        margin: auto;
+        margin-top: 40%;
+    }
+    
+    .tittle_big{
+        padding: 20px;
+        text-align: center;
+    }
 
+    .start_button{
+        display: block;
+        width: 100px;
+        text-align: center; 
+        margin: auto;
+        padding: 25px;
+        margin-top: 30px;
+        width: 50%;
+    }
 }
