--- a/src/pages/form/form.scss
+++ b/src/pages/form/form.scss
@@ -1,3 +1,21 @@
 page-form {
+    .form_element{
+        margin-top: 15px;
+        padding: 8px;
+    }
 
+    .form_select{
+        margin-left: -5px;
+        margin-top: -5px;
+    }
+
+    .start_button{
+        display: block;
+        width: 100px;
+        text-align: center; 
+        margin: auto;
+        padding: 25px;
+        margin-top: 30px;
+        width: 50%;
+    }
 }
