--- a/src/pages/sport-activity/sport-activity.scss
+++ b/src/pages/sport-activity/sport-activity.scss
@@ -1,3 +1,33 @@
 page-sport-activity {
-
+    .icon_time{
+        text-align: center;
+        font-size: 25px;
+        p{
+            font-size: 12px;
+        }
+    }
+    .icon_mode ion-icon{
+        text-align: center;
+        padding: 15px;
+        font-size: 40px;
+        p{    
+            font-size: 12px;
+        }
+    }
+    .icon-selected{
+        background-color: aqua;
+    }
+    .icon-nonselected{
+        background-color: none;
+    }
+    .map{
+        // margin-top: 50px;
+        width:100%;
+        height:50%;
+    }
+    .start_button{
+        width: 100%;
+        height: 40px;
+        padding: 3px;
+    }
 }
