--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,35 @@
 page-home {
+    .fondo{
+        background-image: url('../assets/imgs/gimnasio.jpg');
+        background-size: cover;
+        background-position: center;
+    }
+
+    .logo{
+        display: block;
+        margin: 10% auto;
+        width: 200px;
+    }
+
+    .form_container{
+        margin: 10% auto;
+        height: 40%;
+        padding: 20% 5px;
+        width: 90%;
+        background-color: rgba(255,255,255,0.7);
+    }
+
+    .cedula{
+        background-color: rgba(0,0,0,0);
+        font-weight: initial;
+        color: #000!important;
+        ion-input{
+            text-align: center;
+            padding-left: 5%;
+            padding-right: 5%;
+        }
+    }
+
     .centered_container{
         display: block;
         max-width: 80%;
@@ -7,19 +38,10 @@ page-home {
     }
     
     .tittle_big{
-        padding: 20px;
         text-align: center;
     }
 
     .start_button{
-        background-color: color($colors,primary);
-        font-size: 1.6rem;
-        display: block;
-        width: 100px;
-        text-align: center; 
-        margin: auto;
-        padding: 25px;
         margin-top: 30px;
-        width: 50%;
     }
 }
