--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,7 +13,7 @@ page-home {
 
     .form_container{
         margin: 10% auto;
-        height: 40%;
+        height: 300px;
         padding: 20% 5px;
         width: 90%;
         background-color: rgba(255,255,255,0.7);
