--- a/src/pages/score-board/score-board.scss
+++ b/src/pages/score-board/score-board.scss
@@ -40,6 +40,10 @@ page-score-board {
         text-align: right;
         padding: 10px 10px;
         border-width: 0.5px;
+        img{
+            height: 160px;
+            width: 120px;
+        }
     }
 
     .score{
