Arreglos_de_comentarios_cliente

--- a/src/pages/form/form.scss
+++ b/src/pages/form/form.scss
@@ -26,4 +26,10 @@ page-form {
         background-color: rgba(0,0,0,0);
         color: black!important;
     }
+
+    .dotAndKg{
+        padding-top: 25px;
+        color: gray;
+        font-size: 1.8rem;
+    }
 }
