--- a/src/pages/cardiac/cardiac.scss
+++ b/src/pages/cardiac/cardiac.scss
@@ -1,3 +1,55 @@
 page-cardiac {
+    .glass{
+        width: 90%;
+        margin: 20% auto;
+        box-shadow: 0px 0px 12px #0000008c;
+        height: 70%;
+        padding: 10px 0;
+    }
+    .title{
+        font-size: 30px;
+        width: 100%;
+        text-align: center;
+        color: color($colors,orange);
+        font-weight: bolder;
+    }
 
+    .power{
+        width: 150px;
+        height: 150px;
+        font-size: 60px;
+        border-radius: 50%;
+        box-shadow: 0px 0px 12px #ccc;
+    }
+
+    .powerOn{
+        width: 150px;
+        height: 150px;
+        font-size: 60px;
+        border-radius: 50%;
+        box-shadow: 0px 0px 12px #ccc;
+        background-color: rgba(255,255,255,0.6);
+        color: color($colors,orange);
+        box-shadow: 0px 0px 1px 1px color($colors,orange);
+    }
+
+    .ritm_value{
+        font-size: 60px;
+        width: 160px;
+        text-align: center;
+        box-shadow: 0px 0px 12px #CCC;
+        margin: auto;
+    }
+
+    .online{
+        width: 100%;
+        text-align: center;
+        color: green;
+    }
+    
+    .offline{
+        width: 100%;
+        text-align: center;
+        color: red;
+    }
 }
