--- a/src/pages/score-board/score-board.scss
+++ b/src/pages/score-board/score-board.scss
@@ -64,4 +64,61 @@ page-score-board {
         font-weight: bold;
     }
 
+    .weight_show{
+        z-index: 99999;
+        height: 100px;
+        width: 100%;
+        position: absolute;
+        background-color: white;
+        top: 0;
+        left: 0;
+        right: 0;
+        box-shadow: 0 0 15px #000;
+    }
+
+    .mass_button{
+        height: 30px;
+        padding: 0vh;
+        margin: auto;
+    }
+
+    .form_element input{
+        text-align: center
+    }
+
+    .darkBackground{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 99998;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    .weight_buttom{
+        position: absolute;
+        top: 22em;
+        right: 3em;
+        width: 8em;
+        font-size: 1.2rem;
+        height: auto;
+        padding: 7px;
+    }
+
+    .weight_page_buttom{
+        width: 40px;
+        padding: 10px;
+        position: absolute;
+        top: 7em;
+        right: 1.5em;
+    }
+
+    .hearth_page_buttom{
+        width: 40px;
+        padding: 10px;
+        position: absolute;
+        top: 10em;
+        right: 1.5em;
+    }
 }
